fix: Workaround to ensure gtex chart mouse hover tooltip has high z-index

--- a/ui/shared/global.css
+++ b/ui/shared/global.css
@@ -62,3 +62,7 @@ body {
   font-weight: 500;
   font-size: 0.95em;
 }
+
+#gene-expression-plot-tooltip {
+  z-index: 4000;
+}
